gccida/c0/force_not_mem
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_not_mem/src/explow.c:1238:23: error: use of undeclared identifier 'machine_mode'
temp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_not_mem/src/explow.c:1238:38: error: expected expression
temp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_not_mem/src/obj/explow.o] Error 1
